force-app/src/objects/CTCM__Bank_Payment__c.object
<CustomObject>
    <fields>
        <fullName>CTCM__Amount_FRST__c</fullName>
        <label>Amount FRST</label>
        <summarizedField>CTCM__Bank_Payment_Line__c.CTCM__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CTCM__Bank_Payment_Line__c.CTCM__SequenceType__c</field>
            <operation>equals</operation>
            <value>FRST</value>
        </summaryFilterItems>
        <summaryForeignKey>CTCM__Bank_Payment_Line__c.CTCM__Bank_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTCM__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Payments</relationshipLabel>
        <relationshipName>Bank_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Bank Payments</relationshipLabel>
        <relationshipName>Bank_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Direct Debit Batches</relationshipLabel>
        <relationshipName>Direct_Debit_Batches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__IsPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Number_of_payments__c</fullName>
        <label>Number of payments</label>
        <summaryForeignKey>CTCM__Bank_Payment_Line__c.CTCM__Bank_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTCM__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTCM__Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>CTCM__Bank_Payment_Line__c.CTCM__Amount__c</summarizedField>
        <summaryForeignKey>CTCM__Bank_Payment_Line__c.CTCM__Bank_Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTCM__Transactions_FRST__c</fullName>
        <label>Transactions FRST</label>
        <summaryFilterItems>
            <field>CTCM__Bank_Payment_Line__c.CTCM__SequenceType__c</field>
            <operation>equals</operation>
            <value>FRST</value>
        </summaryFilterItems>
        <summaryForeignKey>CTCM__Bank_Payment_Line__c.CTCM__Bank_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Bank Payment</label>
    <listViews>
        <fullName>CTCM__All</fullName>
        <columns>NAME</columns>
        <columns>CTCM__Total_Amount__c</columns>
        <columns>CTCM__PaymentDate__c</columns>
        <columns>CTCM__Bank_Account__c</columns>
        <columns>CTCM__Number_of_payments__c</columns>
        <columns>CTCM__Company__c</columns>
        <columns>CTCM__IsPaid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CTCM__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPM-{0000000}</displayFormat>
        <label>Bank Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>